# project_cvar_upm_drone_course

./: .gitignore  JOIN_US.md  LICENSE  README.md
control/: Dockerfile  README.md  docker-compose.yaml  launch_as2.bash  stop.bash
control/config/: config.yaml  gates_config.yaml  gates_static_publisher.py  gates_tracker.py  initialize.bash  pid_speed_controller.yaml  render_camera.py  rviz2_config.rviz  tmuxinator.yaml
control/config/control_modes/: available_modes.yaml
control/config/gazebo/: world.yaml
control/docs/: INSTALLATION.md  REFERENCES.md
control/drone_course_ws/src/drone_course_msgs/: CMakeLists.txt  package.xml
control/drone_course_ws/src/drone_course_msgs/srv/: RequestPath.srv
control/drone_course_ws/src/exercise_1/: CMakeLists.txt  package.xml
control/drone_course_ws/src/exercise_1/include/exercise_1/: exercise_1.hpp
control/drone_course_ws/src/exercise_1/src/: exercise_1.cpp  exercise_1_node.cpp
control/drone_course_ws/src/exercise_2/: CMakeLists.txt  package.xml
control/drone_course_ws/src/exercise_2/include/exercise_2/: exercise_2.hpp
control/drone_course_ws/src/exercise_2/src/: exercise_2.cpp  exercise_2_node.cpp
control/drone_course_ws/src/exercise_3/src/: exercise_3.cpp
control/exercises/: Exercise1.md  Exercise2.md  Exercise3.md
control/python_interface/exercise_1/: exercise_1.py
control/python_interface/exercise_2/: exercise_2.py
vision/: README.md
vision/datasets/: dataset_info.yaml
vision/docs/: INSTALLATION.md  REFERENCES.md
vision/exercises/: Exercise1.md  Exercise2.md  Exercise3.md
vision/python_interface/: exercise_1.py  exercise_2.py  exercise_3.py
vision/vision_ws/src/exercise_1/: CMakeLists.txt  package.xml
vision/vision_ws/src/exercise_1/src/: exercise_1.cpp
vision/vision_ws/src/exercise_2/: CMakeLists.txt  package.xml
vision/vision_ws/src/exercise_2/src/: exercise_2.cpp
vision/vision_ws/src/exercise_3/: CMakeLists.txt  package.xml
vision/vision_ws/src/exercise_3/src/: exercise_3.cpp
